--- a/roles/swift_storage/tasks/storage.yml
+++ b/roles/swift_storage/tasks/storage.yml
@@ -7,15 +7,8 @@
 - name: restart rsync
   service: name=rsyncd state=restarted
 
-- name: ensure *-server directories exist in /etc/swift
-  file: path=/etc/swift/{{ item }}-server state=directory owner={{ username }}  group={{ group }} mode=0755
-  with_items:
-    - account
-    - container
-    - object
-
 - name: copy over *-server.conf files
-  template: src={{ item }}-server.conf.j2 dest=/etc/swift/{{ item }}-server/{{ item }}-server.conf owner=swift group=swift mode=0644
+  template: src={{ item }}-server.conf.j2 dest=/etc/swift/{{ item }}-server.conf owner=swift group=swift mode=0644
   with_items:
     - account
     - container
