multiple changes, see details below:
  * create partitions and filesystem
  * install from source
  * run ansible from command line (no support for group vars in vagrant)
  * new host file to be used with VMs created by vagrant

--- a/roles/swift_storage/tasks/storage.yml
+++ b/roles/swift_storage/tasks/storage.yml
@@ -8,7 +8,7 @@
   service: name=rsyncd state=restarted
 
 - name: copy over *-server.conf files
-  template: src={{ item }}-server.conf.j2 dest=/etc/swift/{{ item }}-server.conf owner=swift group=swift mode=0644
+  template: src={{ item }}-server.conf.j2 dest=/etc/swift/{{ item }}-server.conf owner={{ username }} group={{ group }} mode=0644
   with_items:
     - account
     - container
