--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: Setup network
   command: ifup enp0s8
 
-- name: setup epel
-  command: yum -y install http://mirror.clarkson.edu/epel/7/x86_64/e/epel-release-7-5.noarch.rpm creates=/etc/yum.repos.d/epel.repo
+- name: install epel-release
+  yum: name=epel-release state=present
 
 - name: copy private key
   copy: src=insecure_private_key owner=vagrant group=vagrant dest=/home/vagrant/.ssh/id_rsa force=no mode=0600
@@ -13,8 +13,8 @@
 - name: disable selinux
   selinux: state=disabled
 
-- name: Add client to hosts file
-  lineinfile: dest=/etc/hosts regexp='^192\.168\.10\.90' line='192.168.10.90 client' owner=root group=root mode=0644
+- name: Add proxy to hosts file
+  lineinfile: dest=/etc/hosts regexp='^192\.168\.10\.90' line='192.168.10.90 proxy0' owner=root group=root mode=0644
 
 - name: Add storage0 to hosts file
   lineinfile: dest=/etc/hosts regexp='^192\.168\.10\.100' line='192.168.10.100 storage0' owner=root group=root mode=0644
