--- a/roles/swift_common/tasks/main.yml
+++ b/roles/swift_common/tasks/main.yml
@@ -1,3 +1,7 @@
+- include: install_from_src.yml
+  when: install_from_source
+
 - include: install_from_rpm.yml
+  when: not install_from_source
 
 - include: common.yml
